# sunset

./: AGENTS.md  Agents.md  CHANGELOG.md  GEMINI.md  LICENSE  README.md  index.html  logs.txt
.agents/rules/: AGENTS.md  global.md
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: android-beta.yml  android.yml  beta-android.yml  beta-release.yml  release.yml
android/: build.gradle.kts  settings.gradle.kts
android/app/: build.gradle.kts  proguard-rules.pro
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/sunset/: MainActivity.kt
android/app/src/main/java/com/sunset/player/: PlayerActivity.kt
android/app/src/main/java/dev/sudoloser/sunset/: CastOptionsProvider.kt  MainActivity.kt
android/app/src/main/java/dev/sudoloser/sunset/api/: ApiClient.kt
android/app/src/main/java/dev/sudoloser/sunset/data/: DataStore.kt
android/app/src/main/java/dev/sudoloser/sunset/navigation/: Screen.kt
android/app/src/main/java/dev/sudoloser/sunset/player/: MediaProjectionService.kt  PlayerActivity.kt  SunsetMediaService.kt
android/app/src/main/java/dev/sudoloser/sunset/tv/: TVActivity.kt
android/app/src/main/res/layout/: activity_player.xml
android/app/src/main/res/values/: themes.xml
backend/: .gitignore  Cargo.toml
backend/src/: main.rs
docs/: index.html
docs/linux/: install.sh
docs/windows/: install.ps1
frontend/: index.html
frontend/public/: manifest.json  sw.js
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts
frontend/src/components/common/: Button.tsx  Card.tsx  Hero.tsx  Icons.tsx  Input.tsx  MediaRow.tsx  Poster.tsx
frontend/src/components/layout/: Navigation.tsx  Sidebar.tsx
frontend/src/features/auth/: LoginForm.tsx
frontend/src/features/dashboard/: Admin.tsx  Dashboard.tsx
frontend/src/features/onboarding/: OnboardingWizard.tsx
frontend/src/features/player/: VideoPlayer.tsx
frontend/src/features/search/: SearchOverlay.tsx
frontend/src/features/settings/: AccountSettings.tsx  AppearanceSettings.tsx  DiscordSettings.tsx  Settings.tsx  SubtitleSettings.tsx
frontend/src/types/: index.ts  playback.ts
linux/: install-beta.sh
windows/: install-beta.ps1
(+19 files in other folders)
