[package]
name = "sunset-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.7", features = ["runtime-tokio", "sqlite", "macros", "chrono"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower-http = { version = "0.5", features = ["cors", "fs", "trace"] }
tower = "0.4"
regex = "1.0"
walkdir = "2.0"
chrono = { version = "0.4", features = ["serde"] }
bcrypt = "0.15"
dirs = "5.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
notify = "6.1"
tokio-util = { version = "0.7", features = ["io"] }
http = "1.0"
rust-embed = "8.0"
mime_guess = "2.0"
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
futures-util = "0.3"
urlencoding = "2.1"
